// SplashScreen.hpp - Declaración de la clase SplashScreen
#ifndef SPLASHSCREEN_HPP
#define SPLASHSCREEN_HPP
#include <SFML/Graphics.hpp>

class SplashScreen {
public:
    void Mostrar(sf::RenderWindow& window);
};

#endif // SPLASHSCREEN_HPP
